# WindowsFix

./: .gitignore  README.md  Services.vue  bun.lockb  index.html  package.json  services-enhanced.json  services.js
.github/workflows/: build-release.yml  mv-build-release.yml  sm-build-release.yml
BatFiles/: explorer-unpin_network.bat
MV/: Cargo.toml  build.rs  cargo.toml  info.md  plan.md  settings.json
MV/shaders/: bars_3d.wgsl  circular_spectrum.wgsl  common.wgsl  common_history.wgsl  compute_particles.wgsl  cubes_3d.wgsl  depth_wave_3d.wgsl  gradient_bars.wgsl  heatmap.wgsl  mandala.wgsl  oscilloscope.wgsl  particle_render.wgsl  plasma_sphere_3d.wgsl  ripple.wgsl  spectrum.wgsl  sphere_3d.wgsl  terrain_3d.wgsl  tunnel_3d.wgsl  water_droplets_3d.wgsl  wave_3d.wgsl  waveform.wgsl  waveform_glow.wgsl  waveform_history.wgsl
MV/shaders/abstract/: depth_wave_3d.wgsl  energy_field.wgsl  mandala.wgsl  plasma_sphere_3d.wgsl  ripple.wgsl  tunnel_3d.wgsl  wave_3d.wgsl
MV/shaders/geometry_3d/: cubes_3d.wgsl  sphere_3d.wgsl  terrain_3d.wgsl  water_droplets_3d.wgsl
MV/shaders/spectrum/: bars_3d.wgsl  circular_spectrum.wgsl  gradient_bars.wgsl  heatmap.wgsl  kaleidoscope.wgsl  simple_bars.wgsl  spectrum.wgsl
MV/shaders/waveform/: neon_pulse.wgsl  oscilloscope.wgsl  waveform.wgsl  waveform_glow.wgsl  waveform_history.wgsl
MV/src/: app.rs  audio.rs  constants.rs  gpu.rs  main.rs  plugin.rs  settings.rs  types.rs
MV/src/app/: event_handler.rs  lifecycle.rs  mod.rs  state.rs
MV/src/common/: error.rs
MV/src/config/: mod.rs  settings.rs
MV/src/graphics/: analysis.rs  buffers.rs  context.rs  init.rs  mod.rs  pipeline.rs  render.rs  resources.rs
MV/src/graphics/gpu/: init.rs  mod.rs  render.rs  resources.rs  update.rs
MV/src/input/: audio.rs  mod.rs  shortcuts.rs
MV/src/platform/: mod.rs  windows.rs
MV/src/ui/: mod.rs  notifications.rs  theme.rs
MV/src/ui/components/: button.rs  card.rs  mod.rs  slider.rs  stat.rs
MV/src/ui/panels/: controls.rs  dashboard.rs  device_selector.rs  help_overlay.rs  mod.rs  settings.rs  shader_browser.rs
MV/src/visualization/: loader.rs  mod.rs  plugin.rs  shader_info.rs
NS/: index.html  package.json  vite.config.js
NS/src/: App.vue  main.js
NS/src-tauri/: Cargo.toml  tauri.conf.json
NS/src-tauri/capabilities/: default.json
NS/src-tauri/src/: capture.rs  lib.rs  main.rs  metrics.rs  settings.rs
NS/src-tauri/src/capture/: batch_updater.rs  mod.rs  packet_processor.rs
NS/src-tauri/src/commands/: mod.rs  network.rs  notifications.rs  process.rs  settings.rs  windivert.rs
NS/src/components/: StatCard.vue
NS/src/components/Modals/: ProcessModal.vue
NS/src/components/Tabs/: ConfigsTab.vue  DashboardTab.vue  ProcessesTab.vue
NS/src/composables/: useNetwork.js  useProcessManagement.js  useToast.js
NS/src/services/: helpers.js  rust.js
NetworkHandler/: .gitignore  package.json  tailwind.config.js
NetworkHandler/.cargo/: config.toml
NetworkHandler/src/: App.vue  main.js
NetworkHandler/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
NetworkHandler/src-tauri/capabilities/: default.json
NetworkHandler/src-tauri/src/: capture.rs  db.rs  history.rs  lib.rs  models.rs
NetworkHandler/src/components/: ProcessModal.vue
NetworkHandler/src/components/Modals/: ProcessModal.vue
NetworkHandler/src/components/Tabs/: ConfigsTab.vue  DashboardTab.vue  ProcessesTab.vue
NetworkHandler/src/composables/: useNetwork.js
NetworkHandler/src/services/: api.js  icons.js
SM/: .gitignore  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
SM/.cargo/: config.toml  old.toml
SM/src/: App.vue  main.js
SM/src-tauri/: Cargo.toml  tauri.conf.json
SM/src-tauri/src/: ai.rs  config.rs  database.rs  history.rs  lib.rs  main.rs  models.rs  startup_apps.rs  windows_services.rs
SM/src-tauri/src/config/: config.rs
SM/src-tauri/src/core/: ai.rs  database.rs  defaults.rs  history.rs  mod.rs  models.rs
SM/src-tauri/src/platform/: mod.rs  startup_apps.rs  windows_api.rs  windows_services.rs
SM/src/assets/: main.css
SM/src/components/: AnalyticsTab.vue  Button.vue  FiltersTab.vue  Icon.vue
SM/src/components/Modals/: ConfirmDisableModal.vue  ConfirmModal.vue  PresetConfirmModal.vue  PresetResultModal.vue  ServiceDetailsModal.vue  StartupAppModal.vue
SM/src/components/Tabs/: AnalyticsTab.vue  FiltersTab.vue  HistoryTab.vue  PresetsTab.vue  StartupTab.vue
SM/src/composables/: useAnalytics.js  useFiltering.js  useHistory.js  useModals.js  usePresets.js  useServices.js  useStartupApps.js
SM/src/services/: api.js  helpers.js  icons.js  presets.js
Scripts/: explorer-set_grouping_none.bat
Scripts/pure/: explorer-unpin_folders.ps1
Scripts/tui/: README.md  go.mod  go.sum  operations.go  ui.go
ServicesManager/server/: .env.example  app.js  bun.lockb  config.js  package.json  routes.js  services.js  utils.js
ServicesManager/server/public/: services-info.json
ServicesManager/web/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.js
ServicesManager/web/src/: App.vue  main.js
ServicesManager/web/src/assets/: main.css
ServicesManager/web/src/components/: Button.vue  FiltersTab.vue
ServicesManager/web/src/services/: api.js
web/: bun.lockb  index.html  package.json
web/src/: App.vue  main.js  services.js
