[package]
name = "net-sentry"
version = "0.1.0"
description = "NetSentry - High-Performance Network Controller"
authors = ["Popelyshyn Ruslan"]
edition = "2021"

[lib]
name = "net_sentry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
windivert = "0.3"
pnet = "0.35"
governor = "0.6"
netstat2 = "0.9"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
