[package]
name = "net-sentry"
version = "0.1.0"
description = "NetSentry - High-Performance Network Controller"
authors = ["Popelyshyn Ruslan"]
edition = "2021"

[lib]
name = "net_sentry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
windivert = { version = "0.6", features = ["vendored"] }
governor = "0.10"
netstat2 = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_SystemServices",
] }
