[package]
name = "services-manager"
version = "0.5.0"
description = "Windows Services Manager - A desktop application for managing Windows services"
authors = ["Popelyshyn Ruslan"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "services_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_SystemServices",
] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

